# SSN-Optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: run_all.py
benchmark/results/: bert_mrpc.csv  vit_cifar.csv
docs/: api.md
docs/paper/: ssn_optimizer.tex
examples/: quickstart.py
paper/: ssn_optimizer.tex
ssn/: __init__.py  core.py  preconditioner.py  spectral.py  utils.py
tests/: conftest.py  requirements-dev.txt  test_core.py  test_stability.py
